@@ -542,6 +542,31 @@ export(makeWrappedModel)
 export(mcc)
 export(mcp)
 export(meancosts)
+export(measureACC)
+export(measureAUC)
+export(measureBAC)
+export(measureFDR)
+export(measureFN)
+export(measureFNR)
+export(measureFP)
+export(measureFPR)
+export(measureGMEAN)
+export(measureGPR)
+export(measureMAE)
+export(measureMCC)
+export(measureMEDAE)
+export(measureMEDSE)
+export(measureMMCE)
+export(measureMSE)
+export(measureNPV)
+export(measurePPV)
+export(measureRMSE)
+export(measureSAE)
+export(measureSSE)
+export(measureTN)
+export(measureTNR)
+export(measureTP)
+export(measureTPR)
 export(medae)
 export(medse)
 export(mergeSmallFactorLevels)
