@@ -104,15 +104,28 @@ Other performance: \code{\link{G1}}, \code{\link{G2}},
   \code{\link{fpr}}, \code{\link{gmean}},
   \code{\link{gpr}}, \code{\link{mae}}, \code{\link{mcc}},
   \code{\link{mcp}}, \code{\link{meancosts}},
-  \code{\link{measures}}, \code{\link{medae}},
-  \code{\link{medse}}, \code{\link{mmce}},
-  \code{\link{mse}}, \code{\link{multiclass.auc}},
-  \code{\link{npv}}, \code{\link{ppv}}, \code{\link{rmse}},
-  \code{\link{sae}}, \code{\link{silhouette}},
-  \code{\link{sse}}, \code{\link{timeboth}},
-  \code{\link{timepredict}}, \code{\link{timetrain}},
-  \code{\link{tn}}, \code{\link{tnr}}, \code{\link{tp}},
-  \code{\link{tpr}}; \code{\link{makeCostMeasure}};
+  \code{\link{measureACC}}, \code{\link{measureAUC}},
+  \code{\link{measureBAC}}, \code{\link{measureFDR}},
+  \code{\link{measureFN}}, \code{\link{measureFNR}},
+  \code{\link{measureFP}}, \code{\link{measureFPR}},
+  \code{\link{measureGMEAN}}, \code{\link{measureGPR}},
+  \code{\link{measureMAE}}, \code{\link{measureMCC}},
+  \code{\link{measureMEDAE}}, \code{\link{measureMEDSE}},
+  \code{\link{measureMMCE}}, \code{\link{measureMSE}},
+  \code{\link{measureNPV}}, \code{\link{measurePPV}},
+  \code{\link{measureRMSE}}, \code{\link{measureSAE}},
+  \code{\link{measureSSE}}, \code{\link{measureTN}},
+  \code{\link{measureTNR}}, \code{\link{measureTP}},
+  \code{\link{measureTPR}}, \code{\link{measures}},
+  \code{\link{medae}}, \code{\link{medse}},
+  \code{\link{mmce}}, \code{\link{mse}},
+  \code{\link{multiclass.auc}}, \code{\link{npv}},
+  \code{\link{ppv}}, \code{\link{rmse}}, \code{\link{sae}},
+  \code{\link{silhouette}}, \code{\link{sse}},
+  \code{\link{timeboth}}, \code{\link{timepredict}},
+  \code{\link{timetrain}}, \code{\link{tn}},
+  \code{\link{tnr}}, \code{\link{tp}}, \code{\link{tpr}};
+  \code{\link{makeCostMeasure}};
   \code{\link{makeCustomResampledMeasure}};
   \code{\link{performance}}
 }
